Version 2.4 -> 2.4.1
--------------------
 - fixed bug in code comparing setuptools versions when >= 0.6c10
 - verified build against setuptools from distribute 0.6.6
 - renamed patch.43 to differentiate setuptools versions
 - 

Version 2.3 -> 2.4
------------------
 - added 'typeof' to reserved word list
 - added Java stacktrace to __str__() of JavaError, fixing half of PYLUCENE-1
 - fixed local string ref leaks in JArray<jstring>.get/toSequence (Aric Coady)
 - added --libpath parameter to specify -Djava.library.path
 - classes listed with --exclude are no longer loaded (except for dependencies)
 - added --vmarg to add Java VM initialization parameters (Christian Kofler)
 - added support for passing a directory to --module
 - byte values are now returned as signed numbers as opposed to one-char strs
 - added --arch command line flag to filter Mac OS X python config settings
 - cast_() and instance_() methods now generated on extension classes as well
 - fixed bug with reporting Python error that occurred in an extension class
 - fixed bug with passing list of extension objects

Version 2.2 -> 2.3
------------------
 - fixed Solaris compilation issue with using va_arg() with function pointers
 - added --reserved command line arg to extend list of words to mangle
 - fixed bug with initJCC not being run when Python VM embedded in JVM
 - added --wininst to enable use of bdist_wininst with distutils (Jonas Maurus)
 - added --help to describe command line options (Jonas Maurus)
 - added support for --rename to workaround python flattened namespace clashes
 - fixed bug with Enumeration/Iterator template function instantiation
 - removed -framework Python from darwin link flags in setup.py

Version 2.1 -> 2.2
------------------
 - JCC now a subproject of the Apache PyLucene project
 - fixed bug where thread's JNIEnv was not set before calling findClass()
 - unhandled java exception now is printed out via ExceptionDescribe()